--- a/weather/.gitignore
+++ b/weather/.gitignore
@@ -1,1 +1,26 @@
-/build
+
+.gradle/
+
+.DS_Store
+
+local.properties
+
+
+
+# build files
+
+build/
+
+bin/
+
+gen/
+
+output/
+
+
+
+# android studio
+
+*.iml
+
+.idea
