--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.chailijun.mweather"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 10
-        versionName "2.0.1"
+        versionCode 11
+        versionName "2.0.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -76,4 +76,13 @@ dependencies {
     compile 'com.umeng.analytics:analytics:latest.integration'
     //    compile files('libs/GDTUnionSDK.4.9.542.min.jar')
     compile files('libs/GDTUnionSDK.4.9.542.min.jar')
+    compile files('libs/umeng_social_api.jar')
+    compile files('libs/umeng_social_net.jar')
+    compile files('libs/umeng_social_tool.jar')
+    compile files('libs/SocialSDK_QQ_Simplify.jar')
+    compile files('libs/SocialSDK_WeChat_Simplify.jar')
+    compile files('libs/SocialSDK_Sina_Simplify.jar')
+    compile files('libs/umeng_social_shareboard.jar')
+    compile files('libs/umeng_shareboard_widget.jar')
+    compile files('libs/umeng_social_shareview.jar')
 }
